versioned_docs/version-3.2/reference/loops/Accessory.md
---
title: Accessory
---

The accessory loop lists products accessories. As an accessory is itself a product, this loop behaves like a product loop. Therefore you can use all [product loop](./Product.md) arguments and outputs.  
`{loop type="accessory" name="the-loop-name" [argument="value"], [...]}`

:::note Typed relations
Since Thelia 3.1 a relation between two products carries a type, and this loop returns the
relations of the `accessory` type only. The other types, `cross_selling` and `up_selling`, and
any the merchant added, are read through the `product_associations` API resources. See
[Product Relation Types](../../features/product-relation-types.md).
:::

## Arguments {#pse-arguments}

| Argument | Description | Default | Example |
| -------------------------------------------- |:---------------------------------------------------------------------------| :-------: | :----------------------------------|
| all [product loop](./Product.md) arguments      |                                                                            |           | order="min_price", max_price="100" |
| order                                        | A list of values <br/> [Expected values](#accessory-order-possible-values) | accessory | order="accessory,max_price"        |
| product \*                                   | A single product id.                                                       |           | product="2"                        |

## Outputs

| Variable                                                                      | Value                                    |
| :---------------------------------------------------------------------------  | :--------------------------------------- |
| $ACCESSORY_ID                                                                 | The product ID of the accessory          |
| $ID                                                                           | The accessory ID                         |
| $POSITION                                                                     | The position of the accessory in the list|
| all [product loop](./Product.md) outputs, except ID, which is the accessory ID   |                                          |

## Examples

I want to display all accessories which are in category 1, order by ascending price, for all products in category 2.

```smarty
<ul>
{loop type="product" name="products_in_category_2" category="2"}
    {loop type="accessory" name="accessories_in_category_1_order_by_min_price" category="1" product="$ID" order="min_price"}
        <li>{$TITLE} ({$REF})</li>
    {/loop}
{/loop}
</ul>
```

## Order possible values {#accessory-order-possible-values}

[Arguments](#pse-arguments)

| Ascending value                      | Descending value  | Sorted fields |
|--------------------------------------|-------------------|:--------------|
| accessory                            | accessory_reverse | accessory     |
| all [product loop](./Product.md) orders |                   |               |
